--- a/src/Views/Preferences.axaml
+++ b/src/Views/Preferences.axaml
@@ -148,7 +148,7 @@
           <TabItem.Header>
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preferences.Appearance}"/>
           </TabItem.Header>
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,Auto" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preferences.Appearance.Theme}"
                        HorizontalAlignment="Right"
@@ -232,21 +232,26 @@
               </TextBox.InnerRightContent>
             </TextBox>
 
-            <CheckBox Grid.Row="5" Grid.Column="1"
-                      Content="{DynamicResource Text.Preferences.Appearance.OnlyUseMonoFontInEditor}"
-                      IsChecked="{Binding OnlyUseMonoFontInEditor, Mode=TwoWay}"/>
+            <StackPanel Grid.Row="5" Grid.Column="1">
+              <CheckBox Content="{DynamicResource Text.Preferences.Appearance.OnlyUseMonoFontInEditor}"
+                        IsChecked="{Binding OnlyUseMonoFontInEditor, Mode=TwoWay}"/>
 
-            <CheckBox Grid.Row="6" Grid.Column="1"
-                      Height="32"
-                      Content="{DynamicResource Text.Preferences.Appearance.UseFixedTabWidth}"
-                      IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
+              <CheckBox Height="32"
+                        Content="{DynamicResource Text.Preferences.Appearance.UseFixedTabWidth}"
+                        IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
 
-            <CheckBox Grid.Row="7" Grid.Column="1"
-                      Height="32"
-                      Content="{DynamicResource Text.Preferences.Appearance.UseNativeWindowFrame}"
-                      IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseSystemWindowFrame, Mode=OneTime}"
-                      IsVisible="{OnPlatform False, Linux=True}"
-                      IsCheckedChanged="OnUseNativeWindowFrameChanged"/>
+              <CheckBox Height="32"
+                        Content="{DynamicResource Text.Preferences.Appearance.UseNativeWindowFrame}"
+                        IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseSystemWindowFrame, Mode=OneTime}"
+                        IsVisible="{OnPlatform False, Linux=True}"
+                        IsCheckedChanged="OnUseNativeWindowFrameChanged"/>
+              
+              <CheckBox Height="32"
+                        Content="{DynamicResource Text.Preferences.Appearance.SystemTrayIcon}"
+                        IsChecked="{Binding Path=SystemTrayIcon, Mode=OneTime}"
+                        IsVisible="True"
+                        IsCheckedChanged="OnSystemTrayIconCheckedChanged"/>
+            </StackPanel>
           </Grid>
         </TabItem>
 
