--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -62,7 +62,11 @@
                 <Path Width="14" Height="14" Data="{StaticResource Icons.Info}"/>
               </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="{DynamicResource Text.Quit}" Command="{x:Static s:App.QuitCommand}" InputGesture="Ctrl+Q"/>
+            <MenuItem Header="{DynamicResource Text.Quit}" Command="{x:Static s:App.QuitCommand}" InputGesture="Ctrl+Q">
+              <MenuItem.Icon>
+                <Path Width="14" Height="14" Data="{StaticResource Icons.Quit}"/>
+              </MenuItem.Icon>
+            </MenuItem>
           </MenuFlyout>
         </Button.Flyout>
         <Path Width="12" Height="12" Data="{StaticResource Icons.Menu}"/>
