--- a/src/Views/LinesChanged.axaml
+++ b/src/Views/LinesChanged.axaml
@@ -5,18 +5,22 @@
              x:Name="ThisControl"
              x:DataType="local:LinesChanged">
     <StackPanel Orientation="Horizontal" Height="24">
-        <TextBlock Margin="12,0,4,0" VerticalAlignment="Center">
-            <TextBlock.Inlines>
-                <Run Text="++"/>
-                <Run Text="{Binding AddedLines}"/>
-            </TextBlock.Inlines>
-        </TextBlock>
+        <Border Margin="12,0,4,0" VerticalAlignment="Center" BorderBrush="Green" BorderThickness="1" CornerRadius="6">
+            <TextBlock VerticalAlignment="Center" Foreground="Green" Padding="3,0">
+                <TextBlock.Inlines>
+                    <Run Text="+"/>
+                    <Run Text="{Binding AddedLines}"/>
+                </TextBlock.Inlines>
+            </TextBlock>
+        </Border>
 
-        <TextBlock Margin="12,0,4,0" VerticalAlignment="Center">
-            <TextBlock.Inlines>
-                <Run Text="--"/>
-                <Run Text="{Binding RemovedLines}"/>
-            </TextBlock.Inlines>
-        </TextBlock>
+        <Border Margin="12,0,4,0" VerticalAlignment="Center" BorderBrush="Red" BorderThickness="1" CornerRadius="6">
+            <TextBlock VerticalAlignment="Center" Foreground="Red" Padding="3,0">
+                <TextBlock.Inlines>
+                    <Run Text="-"/>
+                    <Run Text="{Binding RemovedLines}"/>
+                </TextBlock.Inlines>
+            </TextBlock>
+        </Border>
     </StackPanel>
 </UserControl>
