Display lines changed

--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -184,7 +184,26 @@
 
           <!-- Stats -->
           <TextBlock Grid.Row="4" Grid.Column="0" Classes="info_label" VerticalAlignment="Top" Margin="0,4,0,0" Text="{DynamicResource Text.CommitDetail.Info.Stats}" />
-          <v:LinesChanged Grid.Row="4" Grid.Column="1" AddedLines="0" RemovedLines="0" />
+          <!--v:LinesChanged Grid.Row="4" Grid.Column="1" AddedCount="{Binding AddedLines}" RemovedCount="{Binding RemovedLines}" /-->
+          <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Height="24">
+            <Border Margin="12,0,4,0" VerticalAlignment="Center" BorderBrush="Green" BorderThickness="1" CornerRadius="6">
+              <TextBlock VerticalAlignment="Center" Foreground="Green" Padding="3,0">
+                <TextBlock.Inlines>
+                  <Run Text="+"/>
+                  <Run Text="{Binding AddedLines}"/>
+                </TextBlock.Inlines>
+              </TextBlock>
+            </Border>
+
+            <Border Margin="12,0,4,0" VerticalAlignment="Center" BorderBrush="Red" BorderThickness="1" CornerRadius="6">
+              <TextBlock VerticalAlignment="Center" Foreground="Red" Padding="3,0">
+                <TextBlock.Inlines>
+                  <Run Text="-"/>
+                  <Run Text="{Binding RemovedLines}"/>
+                </TextBlock.Inlines>
+              </TextBlock>
+            </Border>
+          </StackPanel>
 
           <!-- Messages -->
           <TextBlock Grid.Row="5" Grid.Column="0" Classes="info_label" VerticalAlignment="Top" Margin="0,4,0,0" Text="{DynamicResource Text.CommitDetail.Info.Message}" />
