--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -479,7 +479,8 @@
                     SelectedIndex="{Binding SearchCommitFilterType, Mode=TwoWay}">
             <ComboBox.Items>
               <TextBlock Text="{DynamicResource Text.Repository.Search.BySHA}" FontSize="12"/>
-              <TextBlock Text="{DynamicResource Text.Repository.Search.ByUser}" FontSize="12"/>
+              <TextBlock Text="{DynamicResource Text.Repository.Search.ByAuthor}" FontSize="12"/>
+              <TextBlock Text="{DynamicResource Text.Repository.Search.ByCommitter}" FontSize="12"/>
               <TextBlock Text="{DynamicResource Text.Repository.Search.ByMessage}" FontSize="12"/>
               <TextBlock Text="{DynamicResource Text.Repository.Search.ByFile}" FontSize="12"/>
             </ComboBox.Items>
